--- a/tutorials/R/AOP/Hyperspectral/Work-With-Hyperspectral-Data-In-R/Work-With-Hyperspectral-Data-In-R.Rmd
+++ b/tutorials/R/AOP/Hyperspectral/Work-With-Hyperspectral-Data-In-R/Work-With-Hyperspectral-Data-In-R.Rmd
@@ -141,7 +141,7 @@ Please be sure that you have *at least* version 2.10 of `rhdf5` installed. Use:
 ```{r install-load-library, results="hide" }
 
 # Load `terra`, `rhdf5`, and `rgdal` packages and read NIS data into R
-library(raster)
+library(terra)
 library(rhdf5)
 
 # set working directory to ensure R can find the file we wish to import and where
