--- a/tutorials/R/AOP/Hyperspectral/Work-With-Hyperspectral-Data-In-R/Work-With-Hyperspectral-Data-In-R.Rmd
+++ b/tutorials/R/AOP/Hyperspectral/Work-With-Hyperspectral-Data-In-R/Work-With-Hyperspectral-Data-In-R.Rmd
@@ -143,14 +143,6 @@ Please be sure that you have *at least* version 2.10 of `rhdf5` installed. Use:
 # Load `terra` and `rhdf5` packages to read NIS data into R
 library(terra)
 library(rhdf5)
-
-# set working directory to ensure R can find the file we wish to import and where
-# we want to save our files. Be sure to move the download into your working directory!
-wd <- "~/data/" #This will depend on your local environment
-setwd(wd)
-
-# Define the file name to be opened
-f <- paste0(wd,"NEON_hyperspectral_tutorial_example_subset.h5")
 ```
 
 <div id="ds-dataTip" markdown="1">
@@ -159,6 +151,20 @@ f <- paste0(wd,"NEON_hyperspectral_tutorial_example_subset.h5")
 R, use `update.packages()`.
 
 </div>
+
+```{r set-wd, eval=FALSE, results="hide" }
+# set working directory to ensure R can find the file we wish to import and where
+# we want to save our files. Be sure to move the download into your working directory!
+wd <- "~/data/" #This will depend on your local environment
+setwd(wd)
+```
+
+```{r define-h5, results="hide" }
+# Define the h5 file name to be opened
+f <- paste0(wd,"NEON_hyperspectral_tutorial_example_subset.h5")
+```
+
+You can use `h5ls` and/or `View(h5ls(...))` to look at the contents of the hdf5 file, as follows:
 
 ```{r view-file-strux, eval=FALSE, comment=NA}
 # look at the HDF5 file structure 
